# cmake-dependency-demo

./: .gitignore  CMakeLists.txt  README.md
protocols/: CMakeLists.txt  example.proto  example2.proto
protocols/common/: common.proto
svr/: CMakeLists.txt  main.cpp
